# supply-chain-resilience-monte-carlo-lab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MODEL_CARD.md
src/supply_chain_resilience/: __init__.py  cli.py  distributions.py  metrics.py  reporting.py  scenarios.py  sensitivity.py  simulation.py
tests/: test_distributions.py  test_metrics_sensitivity.py  test_reporting_cli.py  test_simulation.py
tools/: smoke.py  validate_release.py
